2014-6-04 <JDT>
   Implemented AxesDefinition class
   Added descriptions to AxesDefinition and MeasureDefinition
   Simplified example_advanced_usage with new Definitions 
2014-6-03 <JDT>
   Implemented remaining suggestions from FJ authors (Thanks!)
   Fixed bug in example_advanced_usage where wrong beta value was used for NjettinessPlugin tests.
   Removed NANs as signals for number of parameters in Nsubjettiness and NjettinessPlugin
   Reduced the number of allowed parameters from 4 to 3.
   Wrapped NEWS to 80 characters
   Added MeasureDefinition as way to safely store information about the measures used
   Converted a few NANs to std::numeric_limits<double>::quiet_NaN() when a parameter shouldn't be used.
   Added AxesStruct and MeasureStruct to simplify the form of example_advanced_usage
   Added example_v1p0p3 to check for backwards compatibility with v1.0.3
   Changed the names of the MeasureFunctions in order to avoid conflicts with the new MeasureDefinitions
   Fixed bug in correlation between subjets and tau values in NjettinessPlugin
   Added currentTauComponents to Nsubjettiness
   Added subTau information to example_basic_usage
   Added file NjettinessDefinition to hold MeasureDefinition
   Changed Njettiness constructors to treat MeasureSpecification as primary object
   Fixed segmentation fault with ClusterSequenceAreas
2014-6-02 <JDT>
   Implemented many suggestions from FJ authors (Thanks!)
   Removed FastJet 2 specific code
   Made sq() function into internal namespace (as "inline static" to avoid conflicts with other packages)
   Made setAxes() take const reference argument
   Rewrapped README to 80 characters and updated/improved some of the descriptions
   Clarified NEWS about what parts of the Nsubjettiness code is backwards compatible with v1.0.3
   Clarified the para choices in Nsubjettiness constructor
2014-4-30 <JDT>
   Added (void)(n_jets) in AxesFinder.hh to fix unused-parameter warning
2014-4-29 <JDT>