@@ -166,6 +166,7 @@ void analyze(const vector<PseudoJet> & input_particles) {
       UnnormalizedMeasure measureSpec1(beta1);
       UnnormalizedMeasure measureSpec2(beta2);
       
+      
       // define Nsubjettiness functions (beta = 1.0)
       Nsubjettiness         nSub1_beta1(1,  axisMode1,measureSpec1);
       // an alternative (but more prone to error) constructor is nSub1_beta1(1,  axisMode1,Njettiness::unnormalized_measure,beta1);
@@ -180,8 +181,7 @@ void analyze(const vector<PseudoJet> & input_particles) {
       Nsubjettiness         nSub3_beta2(3,  axisMode2,measureSpec2);
       NsubjettinessRatio   nSub21_beta2(2,1,axisMode2,measureSpec2);
       NsubjettinessRatio   nSub32_beta2(3,2,axisMode2,measureSpec2);
-      
-      
+   
       // calculate Nsubjettiness values (beta = 1.0)
       double tau1_beta1 = nSub1_beta1(antikt_jets[j]);
       double tau2_beta1 = nSub2_beta1(antikt_jets[j]);
